desktop-themes/BlueMenta/gtk-3.0/gtk-widgets-backgrounds.css
/* Button background */
button,
toolbar button.raised,
toolbar .raised button,
toolbar combobox button,
toolbar.primary-toolbar .linked button,
toolbar.primary-toolbar .raised button,
.button,
.toolbar .button.raised,
.toolbar .raised .button,
.toolbar GtkComboBox .button {
	background-image: linear-gradient(to bottom, 
		@button_gradient_color_a,
		@button_gradient_color_b);
	background-color: transparent;
}

/* Pushed button and progressbar through background */
button:checked,
button:active,
button:active:hover,
toolbar button:active,
toolbar button:active:hover,
toolbar button.raised:active,
toolbar .raised button:active,
toolbar button.raised:active:hover,
toolbar .raised button:active:hover,
toolbar button:checked,
toolbar button:checked:hover,
toolbar button.raised:checked,
toolbar .raised button:checked,
toolbar button.raised:checked:hover,
toolbar .raised button:checked:hover,
.button:checked,
.button:active,
.button:active:hover,
.toolbar .button:active,
.toolbar .button:active:hover,
.toolbar .button.raised:active,
.toolbar .raised .button:active,
.toolbar .button.raised:active:hover,
.toolbar .raised .button:active:hover,
.toolbar .button:checked,
.toolbar .button:checked:hover,
.toolbar .button.raised:checked,
.toolbar .raised .button:checked,
.toolbar .button.raised:checked:hover,
.toolbar .raised .button:checked:hover {
	background-image: linear-gradient(to bottom,
		@button_active_gradient_color_a,
		@button_active_gradient_color_b);
	background-color: transparent; 
}

trough,
trough highlight,
row trough,
.trough,
.trough.highlight,
.trough row {
	background-image: linear-gradient(to bottom,
		@trough_bg_color_a,
		@trough_bg_color_b);
	background-color: transparent; 
}

button:checked:hover,
button:active:hover,
toolbar button:active:hover,
toolbar button.raised:active:hover,
toolbar .raised button:active:hover,
toolbar button:checked:hover,
toolbar button.raised:checked:hover,
toolbar .raised button:checked:hover,
row trough:hover,
.button:checked:hover,
.button:active:hover,
.toolbar .button:active:hover,
.toolbar .button.raised:active:hover,
.toolbar .raised .button:active:hover,
.toolbar .button:checked:hover,
.toolbar .button.raised:checked:hover,
.toolbar .raised .button:checked:hover,
.trough row:hover {
	background-image: linear-gradient(to bottom,
		shade (@button_active_gradient_color_a, 1.05),
		shade (@button_active_gradient_color_b, 1.05));
	background-color: transparent; 
}

/* Primary and inline toolbars pushed button background */
toolbar.primary-toolbar button:checked,
toolbar.inline-toolbar button:checked,
toolbar.primary-toolbar button:active,
toolbar.inline-toolbar button:active,
.primary-toolbar .button:checked,
.inline-toolbar .button:checked,
.primary-toolbar .button:active,
.inline-toolbar .button:active {
	background-image: linear-gradient(to bottom,
		@button_active_gradient_color_a,
		@button_active_gradient_color_b);
	background-color: transparent;
}

toolbar.primary-toolbar button:checked:hover,
toolbar.inline-toolbar button:checked:hover,
toolbar.primary-toolbar button:active:hover,
toolbar.inline-toolbar button:active:hover,
.primary-toolbar .button:checked:hover,
.inline-toolbar .button:checked:hover,
.primary-toolbar .button:active:hover,
.inline-toolbar .button:active:hover {
	background-image: linear-gradient(to bottom,
		shade (@button_active_gradient_color_a, 1.05),
		shade (@button_active_gradient_color_b, 1.05));
	background-color: transparent;
}

/* Prelit button background */
button:hover,
toolbar button:hover,
toolbar button.raised:hover,
toolbar .raised button:hover,
toolbar combobox button:hover,
.button:hover,
.toolbar .button:hover,
.toolbar .button.raised:hover,
.toolbar .raised .button:hover,
.toolbar GtkComboBox .button:hover {
	background-color: transparent;
	background-image: linear-gradient(to bottom,
		@button_hover_gradient_color_a,
		@button_hover_gradient_color_b);
}

/* Prelit button on primary toolbar background */
toolbar.primary-toolbar button:hover,
.primary-toolbar .button:hover {
	background-color: transparent;
	background-image: linear-gradient(to bottom,
		@button_gradient_color_a,
		@button_gradient_color_b);
}

/* Insensitive button background */
button:disabled,
toolbar combobox button:disabled,
toolbar button.raised:disabled,
toolbar .raised button:disabled,
.button:disabled,
.toolbar GtkComboBox button:disabled,
.toolbar .button.raised:disabled,
.toolbar .raised .button:disabled {
	background-image: none;
	background-color: @insensitive_bg_color;
}

/* Pushed + Insensitive button background */
button:active:disabled,
button:checked:disabled,
toolbar button:active:disabled,
toolbar button:checked:disabled,
toolbar combobox button:active:disabled,
toolbar combobox button:checked:disabled,
.button:active:disabled,
.button:checked:disabled,
.toolbar .button:active:disabled,
.toolbar .button:checked:disabled,
.toolbar GtkComboBox .button:active:disabled,
.toolbar GtkComboBox .button:checked:disabled {
	background-image: linear-gradient(to bottom,
		shade(@insensitive_bg_color, 0.95),
		@insensitive_bg_color 40%,
		@insensitive_bg_color);
	background-color: transparent;
}

/* Entry background */
entry,
combobox entry button,
combobox entry button:hover,
toolbar.primary-toolbar combobox entry button,
toolbar.primary-toolbar combobox entry button:hover,
levelbar trough,
.entry,
GtkComboBox.combobox-entry .button,
GtkComboBox.combobox-entry .button:hover,
.primary-toolbar GtkComboBox.combobox-entry .button,
.primary-toolbar GtkComboBox.combobox-entry .button:hover,
.level-bar.trough {
	background-image: linear-gradient(to bottom,
		@entry_background_a,
		@entry_background_b);
	box-shadow: inset 0 1px @entry_inset, 
		inset 0 2px alpha(@entry_inset, 0.4);
}

/* Entry pushed button background */
toolbar.primary-toolbar combobox entry button:active,
toolbar.primary-toolbar combobox entry button:checked,
combobox entry button:active,
combobox entry button:checked,
.primary-toolbar GtkComboBox.combobox-entry .button:active,
.primary-toolbar GtkComboBox.combobox-entry .button:checked,
/* .primary-toolbar GtkComboBox.combobox-entry .button:hover:active,*/
GtkComboBox.combobox-entry .button:active,
GtkComboBox.combobox-entry .button:checked {
	background-image: linear-gradient(to bottom,
		shade(@entry_background_a, 0.9),
		@entry_background_b);
	background-color: transparent;
	box-shadow: inset 0 1px @entry_inset, 
		inset 0 2px alpha(@entry_inset, 0.4);
}

treeview header button,
column-header.button,
column-header .button {
	background-image: linear-gradient(to bottom,
		shade(@entry_background_a, 1.0),
		@entry_background_b);
	box-shadow: inset 0 2px 0 0 alpha(@borders, 0.3);
}

/* ie. yumex-dnf */
stack treeview header button,
GtkStack column-header .button {
    background-image: linear-gradient(to bottom,
                                      shade(@theme_bg_color, 1.18),
                                      shade(@theme_bg_color, 1.1));
}

treeview header button,
column-header.button:hover,
column-header .button:hover {
	background-image: linear-gradient(to bottom,
		shade(@entry_background_a, 0.96),
		@entry_background_b);
	box-shadow: inset 0 2px 0 0 alpha(@theme_selected_bg_color, 0.7);
}

treeview header button:focus,
treeview header button:checked,
treeview header button:checked:hover,
treeview header button:active,
treeview header button:active:hover,
column-header.button:focus,
column-header .button:focus,
column-header.button:checked,
column-header .button:checked,
column-header.button:checked:hover,
column-header .button:checked:hover,
column-header.button:active,
column-header .button:active,
column-header.button:active:hover,
column-header .button:active:hover {
	background-image: linear-gradient(to bottom,
		shade(@entry_background_a, 0.92),
		@entry_background_b);
	background-color: transparent;
	box-shadow: inset 0 2px 0 0 alpha(@theme_selected_bg_color, 1.0);
	border-image: none;
}

/* Insensitive entry background */
entry:disabled,
combobox entry button:disabled,
levelbar trough:disabled,
.entry:disabled,
GtkComboBox.combobox-entry .button:disabled,
.level-bar.trough:disabled {
	background-color: @insensitive_bg_color;
	background-image: none;
	box-shadow: none;
}

/* Primary and inline toolbars background */
toolbar.primary-toolbar,
toolbar.primary-toolbar,
toolbar.inline-toolbar,
.primary-toolbar .toolbar,
.primary-toolbar.toolbar,
.inline-toolbar.toolbar  {
	background-image: linear-gradient(to bottom,
		shade (@theme_bg_color, 1.0),
		shade (@theme_bg_color, 0.96));
	background-color: transparent;
}

toolbar.primary-toolbar.vertical,
toolbar.primary-toolbar.vertical,
toolbar.inline-toolbar.vertical,
.primary-toolbar .toolbar.vertical,
.primary-toolbar.toolbar.vertical,
.inline-toolbar.toolbar.vertical {
	background-image: linear-gradient(to right,
		shade (@theme_bg_color, 1.0),
		shade (@theme_bg_color, 0.96));
	background-color: transparent;
}

scale trough,
.scale.trough {
	background-image: linear-gradient(to bottom,
		@scale_trough_bg_a,
		@scale_trough_bg_b);
}

scale.vertical trough,
.scale.trough.vertical {
	background-image: linear-gradient(to right,
		@scale_trough_bg_a,
		@scale_trough_bg_b);
}

/* Active switch background*/
switch trough:active,
scale progressbar,
GtkSwitch.trough:active,
.scale.progressbar {
	background-image: linear-gradient(to bottom,
		@switch_trough_active_bg_a,
		@switch_trough_active_bg_b);
	background-color: transparent;
}

scale.vertical progressbar,
.scale.progressbar.vertical {
	background-image: linear-gradient(to right,
		@switch_trough_active_bg_a,
		@switch_trough_active_bg_b);
	background-color: transparent;
}

/* Progressbar backgrounds */

progressbar progress,
row progressbar progress,
row:hover progressbar progress,
row:selected progressbar progress,
row:selected:focus progressbar progress,
.progressbar,
.progressbar row,
.progressbar row:hover,
.progressbar row:selected,
.progressbar row:selected:focus {
	background-image: linear-gradient(to left top,
		alpha (@progressbar_pattern, 0.25),
		alpha (@progressbar_pattern, 0.25) 25%,
		transparent 25%,
		transparent 50%,
		alpha (@progressbar_pattern, 0.25) 50%,
		alpha (@progressbar_pattern, 0.25) 75%,
		transparent 75%,
		transparent),
		linear-gradient(to bottom,
		@progressbar_background_a,
		@progressbar_background_b);
	background-size: 40px 40px, auto;
	box-shadow: inset 1px 1px alpha(white, 0.2), inset -1px -1px alpha(white, 0.1);
}

progressbar.vertical progress,
.progressbar.vertical {
	background-image: linear-gradient(to right top,
		alpha (@progressbar_pattern, 0.25),
		alpha (@progressbar_pattern, 0.25) 25%,
		transparent 25%,
		transparent 50%,
		alpha (@progressbar_pattern, 0.25) 50%,
		alpha (@progressbar_pattern, 0.25) 75%,
		transparent 75%,
		transparent),
		linear-gradient(to right,
		@progressbar_background_a,
		@progressbar_background_b);
}

